--- a/package.json
+++ b/package.json
@@ -34,5 +34,6 @@
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.13",
     "vite": "^5.4.8"
-  }
+  },
+  "proxy": "http://103.52.115.175:3000"
 }
