--- a/vercel.json
+++ b/vercel.json
@@ -14,6 +14,10 @@
     {
       "source": "/api/:path*",
       "destination": "http://103.52.115.175/api/:path*"
+    },
+    {
+      "source": "/socket.io/:path*",
+      "destination": "http://103.52.115.175/socket.io/:path*"
     }
   ]
 }
