--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,7 @@
       "source": "/(.*)",
       "headers": [
         { "key": "Access-Control-Allow-Credentials", "value": "true" },
-        { "key": "Access-Control-Allow-Origin", "value": "https://your-frontend-domain.vercel.app" },
+        { "key": "Access-Control-Allow-Origin", "value": "*" },
         { "key": "Access-Control-Allow-Methods", "value": "GET,OPTIONS,PATCH,DELETE,POST,PUT" },
         { "key": "Access-Control-Allow-Headers", "value": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version" }
       ]
@@ -16,8 +16,17 @@
       "destination": "http://103.52.115.175/api/:path*"
     },
     {
-      "source": "/socket.io/:path*",
-      "destination": "http://103.52.115.175/socket.io/:path*"
+      "source": "/socket.io/(.*)",
+      "destination": "http://103.52.115.175/socket.io/$1"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/socket.io/(.*)",
+      "dest": "http://103.52.115.175/socket.io/$1",
+      "headers": {
+        "Access-Control-Allow-Origin": "*"
+      }
     }
   ]
 }
